# prompt-guard

./: .gitignore  README.md  __init__.py  cli.py  prompt_guard_mcp.py  pyproject.toml  test_prompt_scenarios.py
analytics/: __init__.py  models.py  tracker.py
api/: __init__.py  service.py
config/: __init__.py  default_rules.py  sensitive_data_map.py
detector/: __init__.py  profanity_detector.py  sensitive_detector.py
logger/: __init__.py  logger.py
masker/: __init__.py  masker.py
tests/: test_prompt_scenarios.py
utils/: __init__.py  helpers.py  validation.py
